# std-traits

./: Cargo.toml  LICENSE-MIT  README.md  generate_delegates.py
.github/workflows/: main.yml
spec/: f32_core.txt  f32_std.txt  i32_core.txt  u32_core.txt
src/: array.rs  fun.rs  lib.rs  num.rs  primitive.rs  ptr.rs  reference.rs  slice.rs  tuple.rs  util.rs
std-traits-gen/: Cargo.toml
std-traits-gen/src/: main.rs
