[package]
name = "std-traits"
version = "0.7.0"
edition = "2024"
authors = ["Asger Hautop Drewsen <asger@tyilo.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tyilo/std-traits"
description = "Traits for types in the standard library."
categories = ["no-std", "no-std::no-alloc", "rust-patterns", "algorithms", "mathematics"]
keywords = ["numerics", "primitives", "traits", "mathematics", "numerics"]
rust-version = "1.93"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
